--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,13 @@
 version: 0.2
 phases:
+  install: 
+    commands:
+      - nohup dockerd --host=unix:///var/run/docker.sock --host=tcp://0.0.0.0:2375 --storage-driver=overlay2& sleep 10
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest
+      - systemctl 
   build:
     commands:
       - echo Building the Terraform environment...
