--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
       - echo Building the Terraform environment...
       - docker pull 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest
       - docker run --rm 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest terraform init
-      - docker run --rm 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest terraform plan -out=tfplan
+      - docker run --rm 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest terraform plan
   post_build:
     commands:
       - echo Deploying the Terraform resources...
