--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,7 @@ phases:
     commands:
       - echo Building the Terraform environment...
       - docker pull 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest
+      - pwd
       - docker run --rm 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest terraform init
       - docker run --rm 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest terraform plan
   post_build:
