--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,6 +21,15 @@
 version: 0.2
 
 phases:
+  install:
+    commands:
+      - echo "Installing and configuring Docker..."
+      - apt-get update
+      - apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+      - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
+      - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+      - apt-get update
+      - apt-get install -y docker-ce
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
@@ -30,8 +39,9 @@ phases:
     commands:
       - echo Building the Terraform environment...
       - pwd
-      - terraform init
-      - terraform plan
+      - docker pull 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest
+      - docker run --rm 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest terraform init
+      - docker run --rm 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest terraform plan
   post_build:
     commands:
       - echo Deploying the Terraform resources...
