--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,32 +18,47 @@
 #   post_build:
 #     commands:
 #       - echo Deploying the Terraform resources...
+# version: 0.2
+
+# phases:
+#   install:
+#     commands:
+#       - echo "Installing and configuring Docker..."
+#       - apt-get update
+#       - apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+#       - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
+#       - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+#       - apt-get update
+#       - apt-get install -y docker-ce
+#   pre_build:
+#     commands:
+#       - echo Logging in to Amazon ECR...
+#       - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest
+#       - pwd
+#   build:
+#     commands:
+#       - echo Building the Terraform environment...
+#       - pwd
+#       - docker pull 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest
+#       - docker run --rm 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest terraform init
+#       - docker run --rm 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest terraform plan
+#   post_build:
+#     commands:
+#       - echo Deploying the Terraform resources...
+
 version: 0.2
 
 phases:
-  install:
-    commands:
-      - echo "Installing and configuring Docker..."
-      - apt-get update
-      - apt-get install -y apt-transport-https ca-certificates curl software-properties-common
-      - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-      - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-      - apt-get update
-      - apt-get install -y docker-ce
-  pre_build:
-    commands:
-      - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest
-      - pwd
   build:
     commands:
       - echo Building the Terraform environment...
-      - pwd
-      - docker pull 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest
-      - docker run --rm 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest terraform init
-      - docker run --rm 798092881332.dkr.ecr.ap-south-1.amazonaws.com/terraform_img:latest terraform plan
+      - docker run --rm -v $(pwd):/workspace -w /workspace hashicorp/terraform:1.0.9 init
+      - docker run --rm -v $(pwd):/workspace -w /workspace hashicorp/terraform:1.0.9 plan
+
   post_build:
     commands:
       - echo Deploying the Terraform resources...
+      - docker run --rm -v $(pwd):/workspace -w /workspace hashicorp/terraform:1.0.9 apply -auto-approve
+
 
      
