--- a/buildspec.yml
+++ b/buildspec.yml
@@ -49,6 +49,13 @@
 version: 0.2
 
 phases:
+  pre-build:
+    commands:
+    - echo "Setting AWS credentials..."
+    - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+    - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+    - aws configure set aws_session_token $AWS_SESSION_TOKEN
+    - aws configure set aws_default_region $AWS_REGION
   build:
     commands:
       - echo Building the Terraform environment...
