--- a/buildspec.yml
+++ b/buildspec.yml
@@ -49,7 +49,7 @@
 version: 0.2
 
 phases:
-  pre-build:
+  pre_build:
     commands:
     - echo "Setting AWS credentials..."
     - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
