--- a/buildspec.yml
+++ b/buildspec.yml
@@ -49,10 +49,10 @@
 version: 0.2
 
 phases:
-#   pre_build:
-#     commands:
-#       - echo "Retrieving AWS credentials..."
-#       - aws secretsmanager get-secret-value --secret-id IAM_Creds --query SecretString --output text > aws_credentials.json
+  pre_build:
+    commands:
+      - echo "Retrieving AWS credentials..."
+      - aws secretsmanager get-secret-value --secret-id arn:aws:secretsmanager:ap-south-1:798092881332:secret:IAM_Creds-qcxfY0 --query SecretString --output text > aws_credentials.json
 #       - aws configure set aws_access_key_id $(jq -r '.Access_Key' aws_credentials.json)
 #       - aws configure set aws_secret_access_key $(jq -r '.Secret_Access_Key' aws_credentials.json)
   build:
