--- a/buildspec.yml
+++ b/buildspec.yml
@@ -53,12 +53,12 @@ phases:
     commands:
       - echo "Retrieving AWS credentials..."
       - aws secretsmanager get-secret-value --secret-id arn:aws:secretsmanager:ap-south-1:798092881332:secret:IAM_Creds-qcxfY0 --query SecretString --output text > aws_credentials.json
-      - aws configure set aws_access_key_id $(jq -r '.Access_Key' aws_credentials.json)
-      - aws configure set aws_secret_access_key $(jq -r '.Secret_Access_Key' aws_credentials.json)
+#       - aws configure set aws_access_key_id $(jq -r '.Access_Key' aws_credentials.json)
+#       - aws configure set aws_secret_access_key $(jq -r '.Secret_Access_Key' aws_credentials.json)
   build:
     commands:
       - echo Building the Terraform environment...
-      - docker run --rm -v $(pwd):/workspace -w /workspace hashicorp/terraform:1.0.9 init -reconfigure -backend-config="access_key=aws_access_key_id" -backend-config="secret_key=aws_secret_access_key"
+      - docker run --rm -v $(pwd):/workspace -w /workspace hashicorp/terraform:1.0.9 init -reconfigure -backend-config="access_key=access_key=$(jq -r '.Access_Key' aws_credentials.json)" -backend-config="secret_key=$(jq -r '.Secret_Access_Key' aws_credentials.json)"
       - docker run --rm -v $(pwd):/workspace -w /workspace hashicorp/terraform:1.0.9 plan
 
   post_build:
