--- a/buildspec.yml
+++ b/buildspec.yml
@@ -59,8 +59,8 @@ phases:
   build:
     commands:
       - echo Building the Terraform environment...
-      - docker run --rm -v $(pwd):/workspace -w /workspace hashicorp/terraform:latest init # -backend-config="bucket=tfstatefile-store" -backend-config="key=terraform.tfstate" -backend-config="region=ap-south-1" -backend-config="dynamodb_table=lockid-table"
-
+      #- docker run --rm -v $(pwd):/workspace -w /workspace hashicorp/terraform:latest init # -backend-config="bucket=tfstatefile-store" -backend-config="key=terraform.tfstate" -backend-config="region=ap-south-1" -backend-config="dynamodb_table=lockid-table"
+      - docker run --rm -v $(pwd):/workspace -w /workspace hashicorp/terraform:1.0.9 init -reconfigure -backend-config="access_key=access_key=$(jq -r '.Access_Key' aws_credentials.json)" -backend-config="secret_key=$(jq -r '.Secret_Access_Key' aws_credentials.json)"
       #- docker run --rm -v $(pwd):/workspace -w /workspace hashicorp/terraform:1.0.9 init -reconfigure -backend-config="access_key=$(jq -r '.Access_Key' aws_credentials.json)" -backend-config="secret_key=$(jq -r '.Secret_Access_Key' aws_credentials.json)"
       - docker run --rm -v $(pwd):/workspace -w /workspace hashicorp/terraform:latest plan
 
